<resources>
    <string name="app_name">Gift</string>
    <string name="login_password">密码</string>
    <string name="login_cellphone">输入手机号</string>
    <string name="login">登录</string>
    <string name="login_securitycode">注册新用户</string>
    <string name="login_ortheraccount">使用社交账号登录</string>
    <string name="tv_text_comment">评论</string>
    <string name="tv_text_comment_content">我也说几句...</string>
    <string name="tv_text_comment_send">发送</string>
    <string name="object">对象</string>
    <string name="occasion">场合</string>
    <string name="individuality">个性</string>
    <string name="price">价格</string>
    <string name="product_details">宝贝详情</string>
    <string name="raider_details">攻略详情</string>
    <string name="invite_friends">邀请好友</string>
    <string name="hot_comment">热门评论</string>
    <string name="logout_text">退出登陆</string>
    <string name="discover">指南</string>
    <string name="hot">热门</string>
    <string name="category">分类</string>
    <string name="me">我的</string>
    <string name="search_gift_raider">搜索礼物、攻略</string>
    <string name="search">搜索</string>
    <string name="everyone_search">大家都在搜</string>
    <string name="raider">攻略</string>
    <string name="gift">礼物</string>
    <string name="selected_gift">选礼神器</string>
    <string name="no_login">未登录</string>
    <string name="score">积分:</string>
    <string name="shopping_cart">购物车</string>
    <string name="indent">订单</string>
    <string name="gift_certificate">礼券</string>
    <string name="customer_service">客服</string>
    <string name="like_here">喜欢的礼物摆在这里哦</string>
    <string name="other_comment"><![CDATA[更多热门评论 >>]]></string>
    <string name="special">专题</string>
    <string name="selection_all">查看全部</string>
    <string name="cancle">取消</string>
    <string name="write_comment">写评论</string>
    <string name="share_content">和大家分享你的看法吧~</string>
    <string name="lift">文艺家生活</string>
    <string name="life_like">将生活过程诗的文艺风家居</string>
    <string name="normal_list">默认排序</string>
    <string name="hot_list">按热度排序</string>
    <string name="low_to_high">价格由低到高</string>
    <string name="high_to_low">价格由高到低</string>
    <string name="share_to">分享到</string>
    <string name="wechat_timeline">微信朋友圈</string>
    <string name="wechat">微信好友</string>
    <string name="sina">微信新浪微博</string>
    <string name="qq_zone">QQ空间</string>
    <string name="qq">QQ好友</string>
    <string name="hyper_link">复制链接</string>
    <string name="cancel">取消</string>
    <string name="gift_say">礼物说</string>
    <string name="selected_channel">切换频道</string>

</resources>
