<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:gravity="center"
        android:text="@string/share_to"
        android:textSize="@dimen/twenty_five_sp" />

    <LinearLayout
        android:layout_marginTop="@dimen/five_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/share_wechat_timeline_popup"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/share_selector_wechat_timeline"
            android:drawablePadding="@dimen/five_dp"
            android:text="@string/wechat_timeline"/>
        <Button
            android:id="@+id/share_wechat_popup"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/share_selector_wechat"
            android:drawablePadding="@dimen/five_dp"
            android:text="@string/wechat"/>
        <Button
            android:id="@+id/share_sina_weibo_popup"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/share_selector_sina"
            android:drawablePadding="@dimen/five_dp"
            android:text="@string/sina"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/ten_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/share_qq_zone_popup"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/share_selector_qqzone"
            android:drawablePadding="@dimen/five_dp"
            android:text="@string/qq_zone"/>
        <Button
            android:id="@+id/share_qq_popup"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/share_selector_qq"
            android:drawablePadding="@dimen/five_dp"
            android:text="@string/qq"/>
        <Button
            android:id="@+id/share_hyperlink_popup"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/share_selector_hyperlink"
            android:drawablePadding="@dimen/five_dp"
            android:text="@string/hyper_link"/>
    </LinearLayout>
    <TextView
        android:paddingLeft="@dimen/fifteen_dp"
        android:paddingRight="@dimen/fifteen_dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_marginBottom="@dimen/five_dp"
        android:id="@+id/share_cancle_popup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:text="@string/cancel"
        android:textSize="@dimen/twenty_five_sp"
        android:gravity="center"/>



</LinearLayout>