<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainactivity.MainActivity">
    <include layout="@layout/title_includ_main"/>

    <FrameLayout
        android:id="@+id/frameLayout_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight="1"></FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/color_grey_category_gift_title"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="4">

        <RadioButton
            android:id="@+id/btn_discover"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_discover"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/five_dp"
            android:text="@string/discover"
            android:textColor="@color/color_text_radiobutton"
            android:textSize="@dimen/twelve_sp" />

        <RadioButton
            android:id="@+id/btn_hot"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_hot"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/five_dp"
            android:text="@string/hot"
            android:textColor="@color/color_text_radiobutton"
            android:textSize="@dimen/twelve_sp" />

        <RadioButton
            android:id="@+id/btn_category"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_category"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/five_dp"
            android:text="@string/category"
            android:textColor="@color/color_text_radiobutton"
            android:textSize="@dimen/twelve_sp" />

        <RadioButton
            android:id="@+id/btn_me"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_me"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/five_dp"
            android:text="@string/me"
            android:textColor="@color/color_text_radiobutton"
            android:textSize="@dimen/twelve_sp" />
    </RadioGroup>

</LinearLayout>
