<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_hundred_dp"
        android:background="@mipmap/bg_profile"
        android:id="@+id/relativeLayout">



        <ImageView
            android:id="@+id/iv_avatar_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/me_avatar_boy"/>

        <TextView
            android:id="@+id/tv_account_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_avatar_me"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/no_login"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_account_me"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/score"
            android:textColor="@color/white" />
    </RelativeLayout>



    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
      >


        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_gravity="center_horizontal"
                android:id="@+id/framelayout_me"
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/two_hundred_dp"
                android:splitMotionEvents="false"></FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/color_grey_category_gift_title">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_buy"
                    android:padding="@dimen/five_dp"
                    android:gravity="center"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_cart"
                    android:text="@string/shopping_cart" />

                <TextView
                    android:padding="@dimen/five_dp"
                    android:gravity="center"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_order"
                    android:text="@string/indent" />

                <TextView
                    android:padding="@dimen/five_dp"
                    android:gravity="center"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_coupon"
                    android:text="@string/gift_certificate" />

                <TextView
                    android:padding="@dimen/five_dp"
                    android:gravity="center"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_service"
                    android:text="@string/customer_service" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty_dp"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:id="@+id/gift_me"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/gift"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="@dimen/one_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:background="@color/color_grey_category_gift_title"/>

                <TextView
                    android:id="@+id/raider_me"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/raider"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/color_gift_me"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="@dimen/one_dp"
                        android:layout_weight="1"
                        android:background="@color/title_color_red"
                        />
                    <TextView
                        android:id="@+id/color_raider_me"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="@dimen/one_dp"
                        android:layout_weight="1"
                        android:background="@color/title_color_red"
                        android:visibility="invisible"/>
                </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/two_hundred_fifty_dp">

                <ImageView
                    android:id="@+id/iv_favourite_me"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_holder_favourite"/>

                <TextView
                    android:layout_marginTop="@dimen/ten_dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_favourite_me"
                    android:text="@string/like_here"
                    />
            </RelativeLayout>

                <FrameLayout
                    android:id="@+id/framelayout_favorite_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></FrameLayout>
            </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <!--<ImageView-->
        <!--android:id="@+id/iv_message_me"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/fifteen_dp"-->
        <!--android:src="@mipmap/icon_message"-->
        <!--android:clickable="true"-->
        <!--android:focusable="true"-->
        <!--android:focusableInTouchMode="true"-->
        <!--android:nestedScrollingEnabled="true" />-->

    <!--<ImageView-->
        <!--android:id="@+id/iv_setting_me"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_margin="@dimen/fifteen_dp"-->
        <!--android:src="@mipmap/me_settings" />-->

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/fifteen_dp"-->
        <!--android:layout_toLeftOf="@id/iv_setting_me"-->
        <!--android:src="@mipmap/icon_scan" />-->

</RelativeLayout>