<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@dimen/one_hundred_and_fifty_dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dropdown"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_normal_menu_sort_popupwindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:text="@string/normal_list"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp" />

            <ImageView
                android:id="@+id/iv_normal_menu_sort_popupwindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_dropdown_check" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_hot_menu_sort_popupwindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:text="@string/hot_list"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp" />

            <ImageView
                android:id="@+id/iv_hot_menu_sort_popupwindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_dropdown_check"
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_downtotop_menu_sort_menu_sort_popupwindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:text="@string/low_to_high"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp" />

            <ImageView
                android:id="@+id/iv_downtotop_menu_sort_menu_sort_popupwindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_dropdown_check"
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_toptodown_menu_sort_menu_sort_popupwindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/five_dp"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/high_to_low"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp" />

            <ImageView
                android:id="@+id/iv_toptodown_menu_sort_menu_sort_popupwindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_dropdown_check"
                android:visibility="gone"/>
        </RelativeLayout>


</LinearLayout>