<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:background="@color/title_color_red">

            <ImageView
                android:id="@+id/back_details_category_gift_selection_gridview"
                android:layout_width="@dimen/fifty_dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:padding="@dimen/fifteen_dp"
                android:src="@mipmap/ic_action_back" />

            <TextView
                android:id="@+id/tv_title_details_category_gift_selection_gridview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:lines="1"
                android:maxWidth="@dimen/one_hundred_and_fifty_dp"
                android:text="test"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_sp" />

            <ImageView
                android:id="@+id/menu_sort_details_category_gift_selection_gridview"
                android:layout_width="@dimen/fifty_dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/ten_dp"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingLeft="@dimen/fifteen_dp"
                android:paddingRight="@dimen/fifteen_dp"
                android:paddingTop="@dimen/ten_dp"
                android:src="@mipmap/ic_menu_sort" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <GridView
            android:layout_marginTop="@dimen/thirty_five_dp"
            android:id="@+id/gridView_details_category_gift_selection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/seven_dp"
            android:layout_marginRight="@dimen/seven_dp"
            android:horizontalSpacing="@dimen/six_dp"
            android:numColumns="2"
            android:scrollbars="none"></GridView>
            <FrameLayout
                android:id="@+id/framelayout_selection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></FrameLayout>
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearlayout_category_gift_menu_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/fifty_dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/thirty_five_dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_target_selection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/selector_category_gift_selection"
                android:gravity="center"
                android:paddingRight="@dimen/ten_dp"
                android:text="@string/object" />

            <TextView
                android:layout_width="@dimen/one_dp"
                android:layout_height="@dimen/twenty_dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/btn_scene_selection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/selector_category_gift_selection"
                android:gravity="center"
                android:paddingRight="@dimen/ten_dp"
                android:text="@string/occasion" />

            <TextView
                android:layout_width="@dimen/one_dp"
                android:layout_height="@dimen/twenty_dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/btn_personality_selection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/selector_category_gift_selection"
                android:gravity="center"
                android:paddingRight="@dimen/ten_dp"
                android:text="@string/individuality" />

            <TextView
                android:layout_width="@dimen/one_dp"
                android:layout_height="@dimen/twenty_dp"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/btn_price_selection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/selector_category_gift_selection"
                android:gravity="center"
                android:paddingRight="@dimen/ten_dp"
                android:text="@string/price" />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:background="@android:color/darker_gray"/>

        <FrameLayout
            android:id="@+id/framelayout_category_gift_selection"
            android:layout_width="match_parent"
            android:layout_height="@dimen/two_hundred_dp"
            android:visibility="gone"
            />

    </LinearLayout>

</RelativeLayout>